--- a/hypr/keybindings.conf
+++ b/hypr/keybindings.conf
@@ -62,6 +62,10 @@ bind = $mainMod+Shift, Down, exec, $scriptPath/rofi-wallpaper-selector.sh 1 # ra
 bind = $mainMod+Shift, W, exec, pkill -x rofi || $scriptPath/rofi-wallpaper-selector.sh 2# launch wallpaper select menu
 bind = $mainMod, V, exec, pkill -x rofi || $scriptPath/rofi-clipboard.sh c # launch clipboard
 
+# Switch between groups
+bind = SUPER+ALT, Left, changegroupactive, f
+bind = SUPER+ALT, Right, changegroupactive, b
+
 # Move/Change window focus
 bind = $mainMod, Left, movefocus, l
 bind = $mainMod, Right, movefocus, r
